add child reward controller. create get rewards action
